2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Start a VTK output for complex-based images.

	* mln/io/vtk/save.hh: New.

2010-08-18  Roland Levillain  <roland@lrde.epita.fr>

	* mln/topo/skeleton/breadth_first_thinning.hh: Reindent.

2010-08-18  Roland Levillain  <roland@lrde.epita.fr>

	Fix two errors in mln::topo::skeleton::breadth_first_thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Remove a stray
	semicolon at the end of a `for' statement.
	Create psite using the right iterator.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Disable the last test case in test-mesh-complex-pinv-curv-skel.

	* apps/mesh-segm-skel/test-mesh-complex-pinv-curv-skel.in: Here.

2010-07-15  Roland Levillain  <roland@lrde.epita.fr>

	mesh-complex-pinv-curv-segm and mesh-complex-pinv-curv-skel apps.

	* apps/mesh-segm-skel/mesh-complex-pinv-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	New.
	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc:
	Remove dead code.
	* apps/mesh-segm-skel/test-mesh-complex-pinv-curv-segm.in,
	* apps/mesh-segm-skel/test-mesh-complex-pinv-curv-skel.in:
	New.
	* apps/mesh-segm-skel/Makefile.am (bin_PROGRAMS): Add
	mesh-complex-pinv-curv-segm and mesh-complex-pinv-curv-skel.
	(mesh_complex_pinv_curv_segm_SOURCES)
	(mesh_complex_pinv_curv_skel_SOURCES):
	New.
	(TESTS): Add test-mesh-complex-pinv-curv-segm and
	test-mesh-complex-pinv-curv-skel.
	(MOSTLYCLEANFILES): Add socket-complex-pinv-curv-segm.off,
	teapot-complex-pinv-curv-segm.off,
	socket-complex-pinv-curv-skel.off and
	teapot-complex-pinv-curv-skel.off.

2010-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Actually use the maximal curvature in mesh-complex-max-curv-segm.

	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc: Here.

2010-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Improve the precision of some mesh-segm-skel apps.

	* apps/mesh-segm-skel/mesh-complex-segm.cc,