@@ -1,4 +1,4 @@
-# Copyright (C) 2007, 2008, 2009, 2013 EPITA Research and Development
+# Copyright (C) 2007, 2008, 2009, 2010, 2013 EPITA Research and Development
 # Laboratory (LRDE).
 #
 # This file is part of Olena.
@@ -32,6 +32,7 @@ SUBDIRS =					\
   pnm						\
   ppm 						\
   ppms						\
+  vtk						\
   fld
 
 ## ------------------------------------------------- ##
